--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 
 <img class="preview" src="https://ss7.vzw.com/is/image/VerizonWireless/ipad-pro-12-9-in-cellular-space-gray-03182020?fmt=pjpg&hei=520" width="400" /> 
 <p>Here we sell electronics for good prices and high qualuty.</p>
-<img class="preview" src="https://image-us.samsung.com/SamsungUS/home/mobile/phones/galaxy-a/galaxy-a20/Front.jpg?$product-details-jpg$" width="400" /> 
+<img class="preview" src="images/sams.png" width="400" /> 
 
 <p>In this company we have a large quantity of electronic gadgets.</p>
