--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </body>
 </html>
 <h1>Forward</h1>
-<p>Hello, good morning, good evening, and good afternoon. Thank you for clicking on this website and spending your time with us. To learn more about this website click on description. To learn more about us go to contacts and follow us! We are a team of 4 who made this website and are trying to get some money. I love to code and make people happy with code, I want to make big projects with code and this is my starting point so please help me out and show some love. Here you can buy electronics for a microscopic amount. My website's name "Forward" from my nontopping adventures in life. Thank you reading this and listening to me, have a great day.</p>
+<p>Hello, good morning, good evening, and good afternoon. Thank you for clicking on this website and spending your time with us. To learn more about this website click on description. To learn more about us go to contacts and follow us! We are a team of 4 who made this website and are trying to get some money. I love to code and make people happy with code, I want to make big projects with code and this is my starting point so please help me out and show some love. Here you can buy electronics for a microscopic amount. My website's name "Forward" from my nonstopping adventures in life. Thank you reading this and listening to me, have a great day.</p>
 <img class="preview" src="https://i.dell.com/sites/csimages/Video_Imagery/all/xps_7590_touch.png" width="600"/>
 <p>We have the best electronics for sale.</p>
 
 <img class="preview" src="https://ss7.vzw.com/is/image/VerizonWireless/ipad-pro-12-9-in-cellular-space-gray-03182020?fmt=pjpg&hei=520" width="400" /> 
-<p>Here we sell electronics for good prices and high qualuty.</p>
+<p>Here we sell electronics for good prices and high quality.</p>
 <img class="preview" src="images/sams.png" width="400" /> 
 
 <p>In this company we have a large quantity of electronic gadgets.</p>
